src/test/testData/highlighting/booleanRangeError.mod
<error descr="Type 'boolean' cannot have a range ('in' clause)">dvar boolean x in 0..1;</error>
